[gd_scene load_steps=6 format=1]

[ext_resource path="res://Kontroloj/Gvidilo.gd" type="Script" id=1]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=2]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=4]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=5]

[node name="Pri" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1200.0
script/script = ExtResource( 1 )

[node name="Fontkodo" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -300.0
margin/top = 200.0
margin/right = -800.0
margin/bottom = 350.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fontkodo"
flat = false

[node name="Atribuoj" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -300.0
margin/top = 400.0
margin/right = -800.0
margin/bottom = 550.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Atribuoj"
flat = false

[node name="Donaci" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -300.0
margin/top = 650.0
margin/right = -800.0
margin/bottom = 800.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Donaci"
flat = false

[node name="Reen" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -150.0
margin/top = -950.0
margin/right = -650.0
margin/bottom = -1100.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reen"
flat = false

[connection signal="pressed" from="Fontkodo" to="." method="_on_Fontkodo_pressed"]

[connection signal="pressed" from="Atribuoj" to="." method="_on_Atribuoj_pressed"]

[connection signal="pressed" from="Donaci" to="." method="_on_Donaci_pressed"]

[connection signal="pressed" from="Reen" to="." method="_on_Reen_pressed"]


